--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "happy-dom": "^10.5.2",
+    "react-redux": "^8.1.1",
     "sass": "^1.64.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.5",
+    "vite-plugin-checker": "^0.6.1",
     "vite-plugin-dts": "^3.3.1",
-    "vitest": "^0.33.0",
-    "react-redux": "^8.1.1"
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "react": "^18.2.0",
